// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrowsersChart when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_browser"
    >
      Web Browsers
    </a>
  </div>
  <figure
    id="chart_browsers"
  >
    <div
      class="data chart__bar-chart text--capitalize margin-top-4"
    >
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Chrome
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          48.7%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 49%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Safari
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          35.8%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 36%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Edge
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          8.8%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 9%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Firefox
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.9%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 2%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Safari (in-app)
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.9%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 2%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Samsung Internet
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.4%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 1%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Android Webview
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 1%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Opera
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.2%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Amazon Silk
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.1%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Internet Explorer
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.1%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 0%;"
        />
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`BrowsersChart when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_browser"
    >
      Web Browsers
    </a>
  </div>
  <figure
    id="chart_browsers"
  >
    <div
      class="data chart__bar-chart text--capitalize margin-top-4"
    />
  </figure>
</DocumentFragment>
`;

exports[`BrowsersChart when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_browser"
    >
      Web Browsers
    </a>
  </div>
  <figure
    id="chart_browsers"
  >
    <div
      class="data chart__bar-chart text--capitalize margin-top-4"
    />
  </figure>
</DocumentFragment>
`;
